[package]
name = "tipc"
version = "0.1.0"
authors = ["Abe Friesen"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tipc"
path = "src/lib.rs"

[dependencies]
crossbeam-channel = "0.4.3"

[build-dependencies]
bindgen = "0.54.1"
cc = "1.0"