[package]
name = "tipc"
version = "0.1.0"
authors = ["Abe Friesen <abefriesen.af@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["linux", "tipc"]
repository = "https://github.com/doyshinda/tipc"
description = "Bindings for interoperating with Linux TIPC sockets."
categories = ["api-bindings"]
edition = "2018"

[lib]
name = "tipc"
path = "src/lib.rs"

[dependencies]
crossbeam-channel = "0.4.3"
errno = "0.2.6"

[build-dependencies]
bindgen = "0.55.1"
cc = "1.0"